cmake_minimum_required(VERSION 3.0)
project(yodaos-alarm CXX)
set(CMAKE_CXX_STANDARD 11)

# MARK: - alarm
set(APP_ROOT_DIR "/opt/apps/alarm")
set(APP_INSTALL_DIR "${CMAKE_INSTALL_DIR}${APP_ROOT_DIR}")

file(GLOB ALARM_SRC *.js *.json)

install(FILES ${ALARM_SRC}
  DESTINATION ${APP_INSTALL_DIR}
  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
install(DIRECTORY ./convert-expression
  DESTINATION ${APP_INSTALL_DIR}
  USE_SOURCE_PERMISSIONS)
